--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,15 @@ body{
     font-size: 20px;
 }
 
-
+.add-to-screen-button{
+        background-color: cornflowerblue;
+        padding: 9px 14px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 17px 0px 0px 0px;
+}
 
 
 
